# Ray_Tracing

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
src/: light.cpp  raytracer.cpp  scene1.txt  scene2.txt  scene3.txt  scene4.txt  scene5.txt
